fixed word wrap

--- a/React/resume/src/App.css
+++ b/React/resume/src/App.css
@@ -165,6 +165,7 @@ li{
 .period{
     margin-left: auto;
     margin-right: 20px;
+    min-width: 120px;
 }
 
 hr{
